changed html template

--- a/tpl/invoice.ejs
+++ b/tpl/invoice.ejs
@@ -5,19 +5,43 @@
     <title>A simple, clean, and responsive HTML invoice template</title>
 
     <style>
-		.left {
-			text-align: left;
-		}
+        .left {
+            text-align: left;
+        }
 
-		.right {
-			text-align: right;
-		}
+        .right {
+            text-align: right;
+        }
+
+        .nowp {
+            white-space: nowrap;
+        }
+
+        .small {
+            font-size: small;
+        }
+
+        .normalizeLines {
+            line-height: 1;
+        }
+
+        .sender, .contactDetails {
+            line-height: 1.3;
+        }
+
+        .invoice-box td.maintd {
+            width: 100%;
+        }
+
+        .invoice-box td.itemstd {
+            min-width: 75px;
+        }
 
     .invoice-box{
         max-width:800px;
         margin:auto;
         padding:30px;
-        border:1px solid #eee;
+        border:1px solid #ccc;
         box-shadow:0 0 10px rgba(0, 0, 0, .15);
         font-size:16px;
         line-height:24px;
@@ -36,10 +60,6 @@
         vertical-align:top;
     }
 
-    .invoice-box table tr td:nth-child(2){
-        text-align:right;
-    }
-
     .invoice-box table tr.top table td{
         padding-bottom:20px;
     }
@@ -48,6 +68,7 @@
         font-size:45px;
         line-height:45px;
         color:#333;
+        width: 100%;
     }
 
     .invoice-box table tr.information table td{
@@ -55,8 +76,8 @@
     }
 
     .invoice-box table tr.heading td{
-        background:#eee;
-        border-bottom:1px solid #ddd;
+        background:#ccc;
+        border-bottom:1px solid #bbb;
         font-weight:bold;
     }
 
@@ -65,15 +86,15 @@
     }
 
     .invoice-box table tr.item td{
-        border-bottom:1px solid #eee;
+        border-bottom:1px solid #ccc;
     }
 
     .invoice-box table tr.item.last td{
         border-bottom:none;
     }
 
-    .invoice-box table tr.total td:nth-child(2){
-        border-top:2px solid #eee;
+    .invoice-box table tr.total td {
+        border-top:2px solid #ccc;
         font-weight:bold;
     }
 
@@ -100,27 +121,37 @@
                 <td colspan="4">
                     <table>
                         <tr>
-                            <td class="title" rowspan="3">
+                            <td class="title">
                                 <h3>Rechnung</h3>
                             </td>
 
-														<td class="right">
-															Rechnungsnummer:
-														</td>
+                            <td class="left nowp normalizeLines" rowspan="2">
+                                <p class="sender">
+                                    Meik Specht<br>
+                                    Kloppgasse 15<br>
+                                    55411 Bingen
+                                </p>
 
-                            <td class="right">
-                                <%= invoiceno %>
+                                <p class="contactDetails">
+                                    <strong class="small">Tel:</strong><br>
+                                    0151/12734259<br>
+                                    <strong class="small">Mail:</strong><br>
+                                    meik@schnitzelspecht.de<br>
+                                    <strong class="small">Steuernummer:</strong><br>
+                                    08 / 165 / 50673 GV/4
+                                </p>
                             </td>
                         </tr>
-												<tr>
-													<td class="right">
-														Datum:
-													</td>
+                        <tr>
+                            <td style="width: 100%;">
+                                <%= client.name %><br>
+                                <%= client.street1 %><br>
+                                <% if (client.street2 && client.street2 !== "") { %><%= client.street2 %><br><% } %>
+                                <%= client.zip %> <%= client.city %>
 
-													<td class="right">
-														<%= invoicedate %>
-													</td>
-												</tr>
+                            </td>
+                        </tr>
+
                     </table>
                 </td>
             </tr>
@@ -129,21 +160,18 @@
                 <td colspan="4">
                     <table>
                         <tr>
-                            <td>
-                                <%= client.name %><br>
-                                <%= client.street1 %><br>
-                                <% if (client.street2 && client.street2 !== "") { %><%= client.street2 %><br><% } %>
-                                <%= client.zip %> <%= client.city %>
+                            <td colspan="2" style="width: 100%;"></td>
+
+
+                            <td style="min-width: 200px;" class="left nowp">
+                                <strong>Datum:</strong><br>
+                                <%= invoicedate %><br>
 
                             </td>
 
-                            <td class="left">
-                                Meik Specht<br>
-                                Kloppgasse 15<br>
-                                55411 Bingen<br><br>
-
-																Tel: 0151/12734259<br>
-																Mail: meik@schnitzelspecht.de
+                            <td style="min-width: 200px;" class="right nowp">
+                                <strong>Rechnungsnummer:</strong><br>
+                                <%= invoiceno %>
                             </td>
                         </tr>
                     </table>
@@ -152,19 +180,19 @@
 
 
             <tr class="heading">
-                <td>
+                <td class="maintd">
                     Position
                 </td>
 
-                <td>
+                <td class="itemstd">
                     Menge
                 </td>
 
-                <td>
+                <td class="itemstd">
                     Preis
                 </td>
 
-                <td>
+                <td class="itemstd">
                     Gesamt
                 </td>
             </tr>
@@ -180,20 +208,20 @@
                 </td>
 
                 <td class="right">
-                    <%= items[i].value %>
+                    <%= items[i].value %> &euro;
                 </td>
 
                 <td class="right">
-                    <%= items[i].value * items[i].quantity %>
+                    <%= items[i].value * items[i].quantity %> &euro;
                 </td>
             </tr>
             <% } %>
 
             <tr class="total">
-                <td colspan="3"></td>
+                <td colspan="3">Gesamt</td>
 
-                <td>
-                   <%= total %>
+                <td class="right" >
+                   <%= total %> &euro;
                 </td>
             </tr>
         </table>
