--- a/tpl/invoice.ejs
+++ b/tpl/invoice.ejs
@@ -37,8 +37,32 @@
             min-width: 75px;
         }
 
+				.information td {
+					padding-top: 7mm !important;
+				}
+
+				.footer {
+					bottom: 0px;
+					position: absolute;
+					line-height: 0.7;
+					padding: 0px;
+					margin: 0px;
+					margin-bottom: 5mm;
+				}
+
+				.main {
+					height: 100%;
+					line-height: inherit;
+				}
+
+
+		body {
+      padding: 10mm 15mm 10mm 15mm;
+		}
+
     .invoice-box{
-        max-width:800px;
+        max-width: 21cm;
+				min-height: 29.7cm;
         margin:auto;
         padding:30px;
         border:1px solid #ccc;
@@ -47,11 +71,11 @@
         line-height:24px;
         font-family:'Helvetica Neue', 'Helvetica', Helvetica, Arial, sans-serif;
         color:#555;
+				position: relative;
     }
 
     .invoice-box table{
         width:100%;
-        line-height:inherit;
         text-align:left;
     }
 
@@ -116,7 +140,7 @@
 
 <body>
     <div class="invoice-box">
-        <table cellpadding="0" cellspacing="0">
+        <table class="main" cellpadding="0" cellspacing="0">
             <tr class="top">
                 <td colspan="4">
                     <table>
@@ -150,6 +174,7 @@
                                 <%= client.zip %> <%= client.city %>
 
                             </td>
+														<td></td>
                         </tr>
 
                     </table>
@@ -225,6 +250,24 @@
                 </td>
             </tr>
         </table>
+				<table class="footer">
+					<tr>
+					<td colspan="3" cass="left">
+						<p>
+							<strong>Als Kleinunternehmer bin ich von der gesetzlichen Umsatzsteuerpflicht befreit!</strong>
+						</p>
+					<tr>
+						<td colspan="3" cass="left">
+							<strong class="small">Bankverbindung:</strong>
+						</td>
+					</tr>
+					<tr>
+					<tr class="small">
+						<td><strong>BIC: </strong>GENODE51KRE</td>
+						<td><strong>IBAN: </strong>DE93560900000101200848</td>
+						<td><strong>Bank: </strong>Volksbank Rhein-Nahe-Hunsr&uuml;ck</td>
+					</tr>
+				</table>
     </div>
 </body>
 </html>
