--- a/tpl/style.css
+++ b/tpl/style.css
@@ -139,7 +139,13 @@ footer {
   bottom: 0;
   border-top: 1px solid #C1CED9;
   padding: 8px 0;
+	padding-bottom: 0px;
   text-align: center;
+	vertical-align: bottom;
+}
+
+footer table.footer {
+	margin-bottom: 0px;
 }
 
 table.footer td {
